[package]
name = "hyper-microservices"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
#futures-util = { version = "0.3", default-features = false }
#pretty_env_logger = "0.4"

[dev-dependencies]
