[package]
name = "hyper-microservices"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
log = "0.4.14"
tower = "0.4.10"
futures = "0.3.17"
env_logger = "0.9.0"
hash-ids = "0.2.1"
atomic-counter = "1.0.1"

[dev-dependencies]
